2019-1/231/users/4219/executions/1689_1107.log
== TEST (2019-05-01 21:34:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6))
	if (d==0) :
	d="domingo"
	elif(d==1):
	d="segunda"
	elif(d==2)
	d = "terca"
	elif(d==3)
	d = "quarta"
	elif(d==4)
	d = "quinta"
	elif(d==5)
	d = "sexta"
	elif(d==6)
	d = "sabado"
-- ERROR:
File "XXXX", line 6
    if ((d>=0) and (d<=6))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:35:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d==0) :
	d="domingo"
	elif(d==1):
	d="segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:41:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d==0) :
	d ="domingo"
	elif(d==1):
	d ="segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d ="domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:42:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d==0) :
	d = "domingo"
	elif(d==1):
	d = "segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d = "domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:43:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
num = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d==0) :
	d = "domingo"
	elif (d==1):
	d = "segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d = "domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:44:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d==0) :
	d = "domingo"
	elif (d==1):
	d = "segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d = "domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:46:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d == 0) :
	d = "domingo"
	elif (d==1):
	d = "segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 8
    d = "domingo"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:46:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d == 0) :
	
	elif (d==1):
	d = "segunda"
	elif(d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 9
    elif (d==1):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:48:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	if (d == 0) :
	
	elif (d==2) :
	d = "terca"
	elif(d==3):
	d = "quarta"
	elif(d==4):
	d = "quinta"
	elif(d==5):
	d = "sexta"
	elif(d==6):
	d = "sabado"
-- ERROR:
File "XXXX", line 9
    elif (d==2) :
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:48:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:48:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:48:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
a = int(input("insira: "))
if ((d>=0) and (d<=6)) :
-- ERROR:
File "XXXX", line 7
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:49:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
if ((d>=0 and d<=6)) :
-- ERROR:
File "XXXX", line 6
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:50:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
 if ((d >=0 and d <=6)) :
-- ERROR:
File "XXXX", line 5
    if ((d >=0 and d <=6)) :
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:51:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
 if ((d >= 0 and d <= 6)) :
-- ERROR:
File "XXXX", line 5
    if ((d >= 0 and d <= 6)) :
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:51:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))
 if ((d >= 0 and d <= 6)):
-- ERROR:
File "XXXX", line 5
    if ((d >= 0 and d <= 6)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:52:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
-- ERROR:
File "XXXX", line 7
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:53:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
-- ERROR:
File "XXXX", line 7
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:55:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0)
-- ERROR:
File "XXXX", line 9
    if (d==0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:55:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:56:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:56:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	if (d==1):
		 d = "segunda"
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:01:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	if (d==1):
		 d = "segunda"
	if (d==2):
		 d = "terca"
	if (d==3):
		 d = "quarta"
			
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	if (d==1):
		 d = "segunda"
	if (d==2):
		 d = "terca"
	if (d==3):
		 d = "quarta"
	if (d==4):
		 d = "quinta"
	if (d==5):
		 d = "sexta"
			
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:12:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	if (d==1):
		 d = "segunda"
	if (d==2):
		 d = "terca"
	if (d==3):
		 d = "quarta"
	if (d==4):
		 d = "quinta"
	if (d==5):
		 d = "sexta"
			
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else (d==6) :
		 d = "sabado"
	
			
			
-- ERROR:
File "XXXX", line 21
    else (d==6) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dj = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	
			
			
-- ERROR:
File "XXXX", line 21
    else (d==6) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:16:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "segunda"
	
			
			
-- ERROR:
File "XXXX", line 21
    else (d==6) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:00:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "segunda"
	elif(dl==1):
		 dl = "terca"
	
			
			
-- ERROR:
File "XXXX", line 21
    else (d==6) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:03:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "domingo"
	elif(dl==1):
		 dl = "segunda"
	elif(dl==2):
		 dl = "terca"
	elif(dl==3):
		 dl = "quarta"
	elif(dl==4):
		 dl = "quinta"
	elif(dl==5):
		 dl = "sexta"
	
			
			
-- ERROR:
File "XXXX", line 21
    else (d==6) :
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 23:06:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "domingo"
	elif(dl==1):
		 dl = "segunda"
	elif(dl==2):
		 dl = "terca"
	elif(dl==3):
		 dl = "quarta"
	elif(dl==4):
		 dl = "quinta"
	elif(dl==5):
		 dl = "sexta"
	else :
		 dl = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",dl)
else :
	print("A entrada".d, "eh invalida")
	
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("A entrada".d, "eh invalida")
AttributeError: 'str' object has no attribute 'd'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:07:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "domingo"
	elif(dl==1):
		 dl = "segunda"
	elif(dl==2):
		 dl = "terca"
	elif(dl==3):
		 dl = "quarta"
	elif(dl==4):
		 dl = "quinta"
	elif(dl==5):
		 dl = "sexta"
	else :
		 dl = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",dl)
else :
	print("A entrada".d, "eh invalida")
	
			
			
-- EXECUTION TIME:
0.209535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1689/1107/main.py", line 39, in <module>
    print("A entrada".d, "eh invalida")
AttributeError: 'str' object has no attribute 'd'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 23:07:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
d = int(input("insira: "))

if ((d >= 0 and d <= 6)):
	j = int(input("insira: "))
	dl = (d+j)%7
	if (d==0):
	    d = "domingo"
	elif (d==1):
		 d = "segunda"
	elif (d==2):
		 d = "terca"
	elif (d==3):
		 d = "quarta"
	elif (d==4):
		 d = "quinta"
	elif (d==5):
		 d = "sexta"
	else  :
		 d = "sabado"
	if (dl==0):
		 dl = "domingo"
	elif(dl==1):
		 dl = "segunda"
	elif(dl==2):
		 dl = "terca"
	elif(dl==3):
		 dl = "quarta"
	elif(dl==4):
		 dl = "quinta"
	elif(dl==5):
		 dl = "sexta"
	else :
		 dl = "sabado"
	print("Hoje eh",d, "e o dia futuro eh",dl)
else :
	print("A entrada",d, "eh invalida")
	
			
			
-- EXECUTION TIME:
0.151704
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
